cluster/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: argocd-server
    namespace: argocd
spec:
    rules:
        - host: argocd.mibui.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: argocd-server-lb
                            port:
                                number: 80
